experimental changes (garbage)
garbage changes, nothing worthwhile and most will be reverted.

just an experiment

--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "sailbotlanddisplay",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "(cd public && cd js && cd simulator && node sim.js) & (echo \"Error: no test specified\" && exit 1)",
     "editing": "nodemon server.js",
     "start": "node server.js"
+
   },
   "author": "",
   "license": "ISC",
